Resolves: tdf#92461 fix font fallback in headless text renderer

This suggests that the GF_FONTSHIFT thing is very broken as
its level 0 for all the font renderers here, but follow
the working pattern for now

Change-Id: Ia180a40071157ead9a3b04c05658a6574dd5f864
(cherry picked from commit f4f844952f1213283133fc848b0781bb0ce3bb53)